--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -19,9 +19,9 @@ holidays.fixed=01-01,01-06,05-01,12-06,12-24,12-25,12-26
 holidays.variable=2023-04-07,2023-04-10,2023-05-18,2023-06-23
 
 
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/workappdp}
-spring.datasource.username=${JDBC_DATABASE_USERNAME:testuser}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD:testpass}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/alisatesti}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:akulonpa}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:aukene}
 # heroku käyttää spring boottia hostatessa environment variableja myös databaselle
 # koska heroku postgres on saman appin resourcena. : jälkeiset on localhost setit
 # localia ajettu ihan postgres official sivujen setupilla
